2006-04-12  Richard Guenther  <rguenther@suse.de>

	* profile.c (compute_branch_probabilities): Remove code
	encapsulated in !ir_type (), which are remanents of the
	removed RTL profiling code.
	* rtl-profile.c: Remove.

2006-04-12  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_mixed_function_arg): Update
	magic NULL_RTX comment.
	(function_arg): Store entire fp arg to mem if any part should go
	on stack.
	(rs6000_arg_partial_bytes): Adjust for above change.

2006-04-11  Roger Sayle  <roger@eyesopen.com>

	* dwarf2out.c (output_call_frame_info): Create debug_frame_section
	if it hasn't been initialized by dwarf2out_init.

2006-04-11  John David Anglin  <dava.anglin@nrc-cnrc.gc.ca>

	* pa.md (MAX_12BIT_OFFSET, MAX_17BIT_OFFSET): Define and use new
	symbolic constants in branch patterns.

2006-04-11  Roger Sayle  <roger@eyesopen.com>

	* caller-save.c: #include "addresses.h" after #include "tm_p.h".

2006-04-11  Richard Sandiford  <richard@codesourcery.com>

	PR rtl-optimization/27073
	* gcse.c (try_replace_reg): Revert last change.  Continue to search
	for both REG_EQUAL and REG_EQUIV notes, but only perform replacements
	on the former.

2006-04-11  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sparc.c (function_arg_slotno) <BLKmode>: Handle
	aggregate types other than record and union types.
	(function_arg): Likewise.
	(function_arg_pass_by_reference): In 64-bit mode, return 0 for
	small arrays.
	(function_value): In 64-bit mode, return objects that require it
	in FP registers.

2006-04-11  Roger Sayle  <roger@eyesopen.com>

	* dwarf2out.c (premark_used_types): Remove problematic prototype.

2006-04-11  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c (LINK_COMMAND_SPEC): Move link_gomp after %o.

2006-04-03  Jeff Law  <law@redhat.com>

	PR/27087
	* tree-ssa-copy.c (may_propagate_copy): Test flow sensitive
	alias information too.

2006-04-10  Mike Frysinger  <vapier@gentoo.org>
